src/resume/resume.css
.resume {
  height: max-content;
  box-sizing: content-box;
  width: 80vw;
  max-width: 750px;
  margin: auto;
  z-index: 2;
  overflow-y: auto;
}

img {
  border-radius: 50%;
  width: 150px;
}

.canvas {
  position: absolute;
  z-index: 1;
}

.business-card {
  text-align: center;
}

.row {
  font-style: italic;
}

h4 {
  margin-top: 10px;
  margin-bottom: 10px;
}

ul {
  margin-top: 0;
  list-style-type: disc;
}

h3 {
  margin-bottom: 0;
}

.date {
  float: left;
  text-align: right;
  width: 50%;
}

.role {
  float: left;
  width: 50%;
}

#content {
  background: linear-gradient(#e66465, #9198e5);
  text-size-adjust: none;
  -webkit-text-size-adjust: none;
  -moz-text-size-adjust: none;
  -ms-text-size-adjust: none;
}

